# PythonVsRustAWSLambda

./: .gitignore  README.md  main.rs  python_main.py
rustLambda/: Cargo.toml
rustLambda/src/: main.rs
src/: main.rs
